--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mailserver",
   "version": "1.0.0",
   "main": "index.js",
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mongoose": "^8.11.0",
     "nodemailer": "^6.9.16"
   }
 }
